dev(): write spec files and apply step functions

--- a/templates/specfile.hbs
+++ b/templates/specfile.hbs
@@ -2,10 +2,15 @@ describe(`{{{feature}}}`, () => {
     {{#each scenarios}}
     describe(`{{{name}}}`, () => {
         {{#each steps}}
+        {{#if func}}
+        it(`{{{text}}}`, {{{func}}}
+        );
+        {{else}}
         it(`{{{text}}}`, () => {
             // Fill in your steps.
-        })
+        });
+        {{/if}}
         {{/each}}
-    })
+    });
     {{/each}}
 });
