refactor(template): Update template file for better spacing and defaults.

--- a/templates/specfile.hbs
+++ b/templates/specfile.hbs
@@ -3,11 +3,12 @@ describe(`{{{feature}}}`, () => {
     describe(`{{{name}}}`, () => {
         {{#each steps}}
         {{#if func}}
-        it(`{{{text}}}`, {{{func}}}
-        );
+        it(`{{{text}}}`, {{{func}}});
         {{else}}
         it(`{{{text}}}`, () => {
-            // Fill in your steps.
+            /**
+             * Please fill in your steps. Use your steps.js file.
+             */
         });
         {{/if}}
         {{/each}}
