refactor(templates): Switch to use mustache and beautify the  parsed template
docs(JSdoc): add docs to the index.ts file.

--- a/templates/specfile.mustache
+++ b/templates/specfile.mustache
@@ -1,17 +1,18 @@
-describe(`{{{feature}}}`, () => {
-    {{#each scenarios}}
+describe(`{{feature}}`, () => {
+    {{#scenarios}}
     describe(`{{{name}}}`, () => {
-        {{#each steps}}
-        {{#if func}}
+        {{#steps}}
+        {{#func}}
         it(`{{{text}}}`, {{{func}}});
-        {{else}}
+        {{/func}}
+        {{^func}}
         it(`{{{text}}}`, () => {
             /**
              * Please fill in your steps. Use your steps.js file.
              */
         });
-        {{/if}}
-        {{/each}}
+        {{/func}}
+        {{/steps}}
     });
-    {{/each}}
+    {{/scenarios}}
 });
