refactor: change Step keyword to defineStep. This allows proper intellisense with the Gherkin extension

--- a/templates/stepfile.hbs
+++ b/templates/stepfile.hbs
@@ -1,5 +1,5 @@
 {{#each scenarios}}
-Step(/^{{{name}}}$/, () => {
+defineStep(/^{{{name}}}$/, () => {
     {{#each steps}} 
     {{#if func}}
         /** {{{text}}} */ 
