--- a/templates/specfile.hbs
+++ b/templates/specfile.hbs
@@ -4,7 +4,7 @@ describe(`{{{feature}}}`, () => {
         beforeEach(`{{{name}}}`, () => {
             {{#each steps}} 
             {{#if func}}
-               /** {{text}} */ 
+               /** {{{text}}} */ 
                {{{func}}};
 
             {{else}}
