refactor: add auto generated warning to template files

--- a/templates/stepfile.hbs
+++ b/templates/stepfile.hbs
@@ -1,3 +1,6 @@
+/**
+ * THIS IS AN AUTO GENERATED FILE, PLEASE DO NOT EDIT
+ */
 {{#each scenarios}}
 defineStep(/^{{{name}}}$/, () => {
     {{#each steps}} 
