--- a/templates/specfile.hbs
+++ b/templates/specfile.hbs
@@ -1,3 +1,7 @@
+/**
+ * THIS IS AN AUTO GENERATED FILE, PLEASE DO NOT EDIT
+ */
+
 describe(`{{{feature}}}`, () => {
     {{#each scenarios}}
     {{#is type "Background"}}
