fix: use feature name for output file and save it as a const in the output file.

--- a/templates/specfile.hbs
+++ b/templates/specfile.hbs
@@ -2,6 +2,8 @@
  * THIS IS AN AUTO GENERATED FILE, PLEASE DO NOT EDIT
  */
 
+const __feature = '{{{filename}}}';
+
 describe(`{{{feature}}}`, () => {
     {{#each scenarios}}
     {{#is type "Background"}}
